# FusionFinder

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  angular.json  build.rs  fusion_finder-8717d2d044554f21.js  fusion_finder-8717d2d044554f21_bg.wasm  fusion_finder-9bb62bf33edb5858.js  fusion_finder-9bb62bf33edb5858_bg.wasm  index.html  infinite_dex.json  main.0a4bec9996352cf9.js  main.206ddbfbbe41ae40.js  main.277391fba76a2f8d.js  main.49c6e71c014e5120.js  main.6c8b00502b544883.js  main.79c36dd7862dde7d.js  main.7b4a6d9ed97fb565.js  main.814a158d21698ace.js  main.8beb4c7216a9b418.js  main.8c4f3e01e8ae065b.js  main.8db896f34c1f8d4c.js  main.948956cca5f043b7.js  main.a64d84e4d0a30d1c.js  main.a6c5e647f448c8f9.js  main.a8b0361cd8029792.js  main.a9360bde33267221.js  main.bb90ecadfcd402e2.js  main.c40b851d093d8210.js  main.c8794680aa00d017.js  main.cd6a4d84532d73f9.js  main.cdd94e36fa2ccba5.js  main.d76c240cda026463.js  main.d836345ee67b873a.js  main.dfa3a8d246b12e08.js  main.e1665fe4c49667cf.js  main.e731a39a32015e41.js  main.ebfe389efc4b724d.js  (+15 more)
assets/: pokedex.json  spritelist.json
fusion_datatypes/: Cargo.toml
fusion_datatypes/src/: lib.rs  pokemon.rs  types.rs
fusion_finder_macros/: Cargo.toml
fusion_finder_macros/src/: lib.rs
src/: filter.rs  index.html  info.rs  main.rs  search.rs
src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
src/app/core/: core-routing.module.ts  core.module.ts
src/app/core/_classes/: fusedpokemon.ts  pokemon.ts
src/app/core/_interfaces/: ability.ts  fusedpokemon.ts  pokemon.ts
src/app/core/_pipes/: abilityDisplay.ts  statDiffPipe.ts  typeDisplay.ts
src/app/core/fusefinder/: fusefinder.component.html  fusefinder.component.scss  fusefinder.component.spec.ts  fusefinder.component.ts
src/assets/CustomBattlers/: desktop.ini
