[package]
name = "fusion_finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.10.0"
leptos = { version = "0.5.2", features = ["csr"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
bincode = {version = "1.3.3"}
fusion_datatypes = { path = "fusion_datatypes" }
fusion_finder_macros = { path = "fusion_finder_macros" }
num-traits = "0.2.17"
indexmap = { version = "2.1.0", features = ["serde"] }
build_const = "0.2.2"
itertools = "0.12.0"
web-sys = { version = "0.3.65", features = ["Performance", "Window"] }

[build-dependencies]
fusion_datatypes = { path = "fusion_datatypes" }
serde_json = "1.0.108"
serde = { version = "1.0.190", features = ["derive"] }
indexmap = { version = "2.1.0", features = ["serde"] }
bincode = {version = "1.3.3"}
build_const = "0.2.2"

[workspace]
members = ["fusion_datatypes","fusion_finder_macros"]
resolver = "2"
