[package]
name = "fusion_finder_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0.39"
quote = "1.0.33"
proc-macro2 = "1.0.69"
leptos = { version = "0.5.2", features = ["csr"] }
fusion_datatypes = { path = "../fusion_datatypes" }

[lib]
proc-macro = true

